Remove redundant 'https://' prefix from DOI entries
This commit updates the DOI entries in several bibliography items by removing the unnecessary 'https://' prefix. The change improves consistency with common bibliographic standards and ensures that DOI links are formatted correctly without redundant URL components.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -309,7 +309,7 @@ volume = {13},
 number = {8},
 pages = {1640-1660},
 keywords = {artificial intelligence, automation, computer vision, machine learning, modelling, neural networks, statistics},
-doi = {https://doi.org/10.1111/2041-210X.13901},
+doi = {10.1111/2041-210X.13901},
 url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.13901},
 eprint = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.13901},
 abstract = {Abstract Deep learning is driving recent advances behind many everyday technologies, including speech and image recognition, natural language processing and autonomous driving. It is also gaining popularity in biology, where it has been used for automated species identification, environmental monitoring, ecological modelling, behavioural studies, DNA sequencing and population genetics and phylogenetics, among other applications. Deep learning relies on artificial neural networks for predictive modelling and excels at recognizing complex patterns. In this review we synthesize 818 studies using deep learning in the context of ecology and evolution to give a discipline-wide perspective necessary to promote a rethinking of inference approaches in the field. We provide an introduction to machine learning and contrast it with mechanistic inference, followed by a gentle primer on deep learning. We review the applications of deep learning in ecology and evolution and discuss its limitations and efforts to overcome them. We also provide a practical primer for biologists interested in including deep learning in their toolkit and identify its possible future applications. We find that deep learning is being rapidly adopted in ecology and evolution, with 589 studies (64\%) published since the beginning of 2019. Most use convolutional neural networks (496 studies) and supervised learning for image identification but also for tasks using molecular data, sounds, environmental data or video as input. More sophisticated uses of deep learning in biology are also beginning to appear. Operating within the machine learning paradigm, deep learning can be viewed as an alternative to mechanistic modelling. It has desirable properties of good performance and scaling with increasing complexity, while posing unique challenges such as sensitivity to bias in input data. We expect that rapid adoption of deep learning in ecology and evolution will continue, especially in automation of biodiversity monitoring and discovery and inference from genetic data. Increased use of unsupervised learning for discovery and visualization of clusters and gaps, simplification of multi-step analysis pipelines, and integration of machine learning into graduate and postgraduate training are all likely in the near future.},
@@ -324,7 +324,7 @@ volume = {14},
 number = {2},
 pages = {708-723},
 keywords = {ecosystem structure, forest structure, forestry, lidar, remote sensing, representative elementary area, scaling},
-doi = {https://doi.org/10.1111/2041-210X.14040},
+doi = {10.1111/2041-210X.14040},
 url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.14040},
 eprint = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.14040},
 abstract = {Abstract Lidar-derived forest structural diversity (FSD) metrics—including measures of forest canopy height, vegetation arrangement, canopy cover (CC), structural complexity and leaf area and density—are increasingly used to describe forest structural characteristics and can be used to infer many ecosystem functions. Despite broad adoption, the importance of spatial resolution (grain and extent) over which these structural metrics are calculated remains largely unconsidered. Often researchers will quantify FSD at the spatial grain size of the process of interest without considering the scale dependency or statistical behaviour of the FSD metric employed. We investigated the appropriate scale of inference for eight lidar-derived spatial metrics—CC, canopy relief ratio, foliar height diversity, leaf area index, mean and median canopy height, mean outer canopy height, and rugosity (RT)--representing five FSD categories—canopy arrangement, CC, canopy height, leaf area and density, and canopy complexity. Optimal scale was determined using the representative elementary area (REA) concept whereby the REA is the smallest grain size representative of the extent. Structural metrics were calculated at increasing canopy spatial grain (from 5 to 1000 m) from aerial lidar data collected at nine different forested ecosystems including sub-boreal, broadleaf temperate, needleleaf temperate, dry tropical, woodland and savanna systems, all sites are part of the National Ecological Observatory Network within the conterminous United States. To identify the REA of each FSD metric, we used changepoint analysis via segmented or piecewise regression which identifies significant changepoints for both the magnitude and variance of each metric. We find that using a spatial grain size between 25 and 75 m sufficiently captures the REA of CC, canopy arrangement, canopy leaf area and canopy complexity metrics across multiple forest types and a grain size of 30–150 m captures the REA of canopy height metrics. However, differences were evident among forest types with higher REA necessary to characterize CC in evergreen needleleaf forests, and canopy height in deciduous broadleaved forests. These findings indicate the appropriate range of spatial grain sizes from which inferences can be drawn from this set of FSD metrics, informing the use of lidar-derived structural metrics for research and management applications.},
@@ -338,7 +338,7 @@ volume = {148},
 pages = {104680},
 year = {2021},
 issn = {0098-3004},
-doi = {https://doi.org/10.1016/j.cageo.2020.104680},
+doi = {10.1016/j.cageo.2020.104680},
 url = {https://www.sciencedirect.com/science/article/pii/S0098300420306518},
 author = {Howard Butler and Bradley Chambers and Preston Hartzell and Craig Glennie},
 keywords = {Point clouds, Lidar, Open source software, Geospatial, Iterative closest point},
@@ -352,7 +352,7 @@ volume = {1},
 pages = {100002},
 year = {2020},
 issn = {2666-0172},
-doi = {https://doi.org/10.1016/j.srs.2020.100002},
+doi = {10.1016/j.srs.2020.100002},
 url = {https://www.sciencedirect.com/science/article/pii/S2666017220300018},
 author = {Ralph Dubayah and James Bryan Blair and Scott Goetz and Lola Fatoyinbo and Matthew Hansen and Sean Healey and Michelle Hofton and George Hurtt and James Kellner and Scott Luthcke and John Armston and Hao Tang and Laura Duncanson and Steven Hancock and Patrick Jantz and Suzanne Marselis and Paul L. Patterson and Wenlu Qi and Carlos Silva},
 keywords = {Lidar, Ecosystem structure, GEDI, Biomass},
