Fix braces around author field in bibliography entry for Office for Coastal Management
Added extra braces around the author name in the NOAA_HI_Lidar_2019 entry to ensure proper formatting in BibTeX. This change prevents potential issues with capitalization or rendering in citations.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -379,7 +379,7 @@ abstract = {Obtaining accurate and widespread measurements of the vertical struc
 }
 
 @misc{NOAA_HI_Lidar_2019,
-  author       = {Office for Coastal Management},
+  author       = {{Office for Coastal Management}},
   year         = {2024},
   title        = {2018 - 2020 NOAA USGS Lidar: Hawaii, HI from 2019},
   publisher    = {NOAA National Centers for Environmental Information},
