Simplify large point cloud example notebook.
Rewrote the notebook to decrease complexity and remove unnecessary details. Reduced the number of steps and explanations to focus solely on key operations for processing large point clouds using PyForestScan. Streamlined imports, markdown text, and code snippets for clarity.

--- a/docs/examples/getting-started-importing-preprocessing-dtm-chm.ipynb
+++ b/docs/examples/getting-started-importing-preprocessing-dtm-chm.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,16 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_geotiff(chm, \"../example_data/20191210_5QKB020880_DS05_chm.tif\", \"EPSG:32605\", extent)"
+    "create_geotiff(chm, \"/Users/iosefa/repos/obia/docs/example_data/chm037.tif\", \"EPSG:32605\", extent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -189,6 +189,13 @@
    "source": [
     "plot_metric(\"Canopy Height Model\", chm, extent, metric_name='Height (m)', cmap='viridis', fig_size=None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
