feat: add GEDI-style canopy cover metric
- calculate: add  using 1 − exp(−k·PAIabove(z))
- process: support  with  and  options
- api: export  in
- tests: add unit tests for canopy cover (expected value, zero PAD, NaNs, monotonic with z)
- docs: add canopy cover usage page, link from intro, and update example notebook to compute and plot cover (z=2 m)

Signed-off-by: iosefa <ipercival@gmail.com>

--- a/docs/examples/calculate-forest-metrics.ipynb
+++ b/docs/examples/calculate-forest-metrics.ipynb
@@ -23,10 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "from pyforestscan.handlers import read_lidar\n",
-    "from pyforestscan.visualize import plot_pad, plot_metric\n",
-    "from pyforestscan.filters import filter_hag\n",
-    "from pyforestscan.calculate import assign_voxels, calculate_pad, calculate_pai, calculate_fhd, calculate_chm"
+    "from pyforestscan.handlers import read_lidar\nfrom pyforestscan.visualize import plot_pad, plot_metric\nfrom pyforestscan.filters import filter_hag\nfrom pyforestscan.calculate import assign_voxels, calculate_pad, calculate_pai, calculate_fhd, calculate_chm, calculate_canopy_cover"
    ]
   },
   {
@@ -61,7 +58,7 @@
    "outputs": [],
    "source": [
     "arrays = filter_hag(arrays)\n",
-    "points = arrays[0]"
+    "dpoints = arrays[0]"
    ]
   },
   {
@@ -200,6 +197,32 @@
    ],
    "source": [
     "plot_metric('Plant Area Index', pai, extent, metric_name='PAI', cmap='viridis', fig_size=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Canopy Cover (GEDI-style)\n",
+    "We can compute canopy cover at a height threshold z using the Beer\u2013Lambert relation. Here, we use z = 2 m and k = 0.5 (spherical leaf-angle assumption)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cover = calculate_canopy_cover(pad, voxel_height=voxel_resolution[-1], min_height=2.0, k=0.5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_metric('Canopy Cover (z=2 m)', cover, extent, metric_name='Cover', cmap='viridis', fig_size=None)\n"
    ]
   },
   {
